--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,12 +12,20 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "no-console": "warn",
+    "no-console": "off",
     "no-debugger": "error",
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "no-var": "error",
     "prefer-const": "error",
     "no-param-reassign": ["error", { "props": false }]
   },
-  "ignorePatterns": ["dist", "coverage", "node_modules", "jest.config.js"]
+  "ignorePatterns": ["dist", "coverage", "node_modules", "jest.config.js"],
+  "overrides": [
+    {
+      "files": ["src/utils/**/*.ts", "src/types/**/*.ts"],
+      "rules": {
+        "no-console": "warn"
+      }
+    }
+  ]
 }
